--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,51 @@
-.titulo{
-    color: hotpink;
-    /* width: 310px; */
-    height: 50px;
-    background-color: teal ;
+@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Quicksand:wght@300;500;700&display=swap');
+
+body {
+    font-family: 'Fredoka One', cursive;
+    background-color:#2155CD ;
+
+}
+#seleccionar-mascota{
+    /* Se aplican conceptos de flexbox */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100vh;
+    align-items: center;
 }
 
-label {
-    background-color: tomato;
+.titulo{
+    color: white;
+    font-size: 32px;
+}
+.subtitulo{
+    color: white;
+    font-size: 20px;
+
+}
+
+.tarjetas{
+    display: flex;
+    gap: 10px;
+}
+
+.tarjeta-de-mokepon{
+
+    background-color: #0AA1DD;
+    width: 100px;
+    height: 100px;
+    padding: 10px;
+    box-sizing: border-box;
+    margin: 10px;
+    border-radius: 20px;
 }
 
 input{
-    background-color: aqua;
+    display: none;
 }
-button {
-    background-color: lightcoral;
+
+#boton-mascota{
+    background-color: LightGreen;
+    
+
 }
