--- a/styles.css
+++ b/styles.css
@@ -84,3 +84,36 @@ input{
     margin-top: 30px;
 
 }
+#mensajes{
+    background: salmon;
+    width: 300px;
+    border-radius: 20px;
+    margin-top: 20px;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+#boton-reiniciar{
+    border: transparent;
+    color: #2155CD;
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+    font-weight: bold ;
+    border-radius: 15px;
+}
+
+.batalla{
+    display: grid;
+    grid-template-columns: 100px 100px;
+    text-align: center;
+}
+
+@media (max-width: 360px){
+    .tarjetas {
+        flex-direction: column;
+    }
+
+}
