--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ body {
 .tarjeta-de-mokepon{
 
     background-color: #0AA1DD;
-    width: 164px;
+    width: 170px;
     height: 100px;
     padding: 10px;
     box-sizing: border-box;
@@ -53,16 +53,35 @@ input{
     display: none;
 }
 
+input:checked + label {
+    border: solid;
+    border-color: white;
+    background-color:#8449f1 ;
+}
+
+input:hover + label {
+background-color:#8449f1 ;
+}
+
 #boton-mascota{
     background-color: #79DAE8;
     width: 160px;
-    height: 40px;
+    height: 50px;
     border-radius: 30px;
     color: #2155CD;
     border-color: white    ;
     font-family: 'Poppins', sans-serif;
     font-size: 18px;
     margin-top: 30px;
+}
+
+#boton-mascota:hover{
+    width: 170px;
+    height: 60px;
+}
+#boton-mascota:active{
+    background-color:#8449f1 ;
+    color: white;
 }
       
 #seleccionar-ataque{
@@ -73,46 +92,88 @@ input{
 
 .boton-de-ataque{
     background-color: #79DAE8;
-    width: 100px;
-    height: 40px;
-    border-radius: 30px;
+    width: 160px;
+    height: 60px;
+    border-radius: 20px;
     box-sizing: border-box;
     color: white;
     border-color:transparent;
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
     margin-top: 30px;
+    align-items: center;
+    justify-content: center;
 
 }
+
+.boton-de-ataque:active {
+    background-color: #0096FF;
+}
 #mensajes{
-    background: salmon;
-    width: 300px;
+    background: whitesmoke;
+    width: 200px;
+    height: auto;
     border-radius: 20px;
-    margin-top: 20px;
+    margin-top: 15px;
     padding: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    color: #2155CD;
+    font-family: 'Poppins', sans-serif;
+    font-size: 18px;
+    font-weight: bold;
+    text-align: center;
 }
 
 #boton-reiniciar{
-    border: transparent;
+    border: solid;
+    border-color: rgb(66, 154, 248)   ;
     color: #2155CD;
     font-family: 'Poppins', sans-serif;
-    font-size: 16px;
-    font-weight: bold ;
-    border-radius: 15px;
+    font-size: 18px;
+    /* font-weight: bold ; */
+    border-radius: 5px;
+    margin: 0px;
+    background-color: #2155CD;
+    color: white;
+    
 }
 
+#boton-reiniciar:hover{
+    background-color: #0096FF;
+}
+
+#boton-reiniciar:active {
+    background-color: #8449f1;
+}
 .batalla{
     display: grid;
     grid-template-columns: 100px 100px;
     text-align: center;
+    color: white;
+    font-family: 'Poppins', sans-serif;
 }
 
-@media (max-width: 400px){
+#vida-jugador, #vida-enemigo {
+    font-size: 32px;
+    margin-bottom: 0;
+}
+
+/* #ataques-jugador, #ataques-enemigo{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+} */
+
+@media (max-width: 620px){
     .tarjetas {
+        flex-direction: column;
+    }
+
+    .boton-de-ataque{
+        display: flex;
         flex-direction: column;
     }
 
