Correción botones ataque responsive

--- a/styles.css
+++ b/styles.css
@@ -201,6 +201,7 @@ background-color:#8449f1 ;
     .boton-de-ataque{
         display: flex;
         flex-direction: column;
+        margin-top: 10px;
     }
 
 }
